@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /* 
- * $Id: sendsize.c,v 1.110 2001/04/23 21:14:52 jrjackson Exp $
+ * $Id: sendsize.c,v 1.111 2001/08/01 22:05:59 jrjackson Exp $
  *
  * send estimated backup sizes using dump
  */
@@ -88,6 +88,8 @@ disk_estimates_t *est_list;
 
 int maxdumps = 1, dumpsrunning = 0;
 char *host;				/* my hostname from the server */
+char *prefix;				/* debug line prefix if maxdumps */
+char *prefix_line;			/* debug line prefix if maxdumps */
 
 /* local functions */
 int main P((int argc, char **argv));
@@ -141,6 +143,9 @@ char **argv;
     erroutput_type = (ERR_INTERACTIVE|ERR_SYSLOG);
     dbopen();
     dbprintf(("%s: version %s\n", argv[0], version()));
+
+    prefix = stralloc(get_pname());
+    prefix_line = "";
 
     host = alloc(MAX_HOSTNAME_LENGTH+1);
     gethostname(host, MAX_HOSTNAME_LENGTH);
@@ -369,8 +374,10 @@ disk_estimates_t *est;
 void calc_estimates(est)
 disk_estimates_t *est;
 {
-    dbprintf(("calculating for amname '%s', dirname '%s'\n", est->amname,
-	      est->dirname));
+    char my_pid[NUM_STR_SIZE];
+
+    dbprintf(("%s: calculating for amname '%s', dirname '%s'\n",
+	      prefix, est->amname, est->dirname));
     if (maxdumps > 1) {
       while(dumpsrunning >= maxdumps) {
 	wait(NULL);
@@ -386,6 +393,9 @@ disk_estimates_t *est;
       default:
 	return;
       }
+      ap_snprintf(my_pid, sizeof(my_pid), "%d", getpid());
+      prefix = newvstralloc(prefix, prefix, ": ", my_pid, NULL);
+      prefix_line = newstralloc2(prefix_line, prefix, ": ");
     }
 
     /* Now in the child process */
@@ -476,7 +486,7 @@ disk_estimates_t *est;
     argv[argc++] = stralloc(est->amname);
     argv[argc++] = stralloc(est->dirname);
 
-    dbprintf(("%s: running cmd:", argv[0]));
+    dbprintf(("%s: running cmd: %s", prefix, argv[0]));
     for(i=0; i<argc; ++i)
 	dbprintf((" %s", argv[i]));
 
@@ -503,8 +513,7 @@ disk_estimates_t *est;
         break;
     case 0:
 	execve(cmd, argv, safe_env());
-	dbprintf(("%s: execve %s returned: %s",
-		  get_pname(), cmd, strerror(errno)));
+	dbprintf(("%s: execve %s returned: %s", prefix, cmd, strerror(errno)));
 	exit(1);
     }
     for(i = 0; i < argc; i++) {
@@ -525,7 +534,7 @@ disk_estimates_t *est;
     for(level = 0; level < DUMP_LEVELS; level++) {
 	if(est->est[level].needestimate) {
 	    dbprintf(("%s: getting size via dump for %s level %d\n",
-		      get_pname(), est->amname, level));
+		      prefix, est->amname, level));
 	    size = getsize_dump(est->amname, level);
 
 	    amflock(1, "size");
@@ -550,7 +559,7 @@ disk_estimates_t *est;
     for(level = 0; level < DUMP_LEVELS; level++) {
 	if(est->est[level].needestimate) {
 	    dbprintf(("%s: getting size via smbclient for %s level %d\n",
-		      get_pname(), est->amname, level));
+		      prefix, est->amname, level));
 	    size = getsize_smbtar(est->amname, level, est->exclude);
 
 	    amflock(1, "size");
@@ -576,7 +585,7 @@ disk_estimates_t *est;
   for(level = 0; level < DUMP_LEVELS; level++) {
       if (est->est[level].needestimate) {
 	  dbprintf(("%s: getting size via gnutar for %s level %d\n",
-		    get_pname(), est->amname, level));
+		    prefix, est->amname, level));
 	  size = getsize_gnutar(est->amname, level,
 				est->exclude, est->est[level].dumpsince);
 
@@ -693,7 +702,7 @@ long getsize_dump(disk, level)
     {
         char *name = " (xfsdump)";
 	dbprintf(("%s: running \"%s%s -F -J -l %s - %s\"\n",
-		  get_pname(), cmd, name, level_str, device));
+		  prefix, cmd, name, level_str, device));
     }
     else
 #endif							/* } */
@@ -713,7 +722,7 @@ long getsize_dump(disk, level)
 #endif
 	dumpkeys = vstralloc(level_str, "s", "f", NULL);
         dbprintf(("%s: running \"%s%s %s 1048576 - %s\"\n",
-		  get_pname(), cmd, name, dumpkeys, device));
+		  prefix, cmd, name, dumpkeys, device));
     }
     else
 #endif							/* } */
@@ -729,7 +738,7 @@ long getsize_dump(disk, level)
 	device = amname_to_dirname(disk);
 	dumpkeys = vstralloc(level_str, "b", "f", NULL);
 	dbprintf(("%s: running \"%s%s %s 60 - %s\"\n",
-		  get_pname(), cmd, name, dumpkeys, device));
+		  prefix, cmd, name, dumpkeys, device));
     }
     else
 #endif							/* } */
@@ -751,7 +760,7 @@ long getsize_dump(disk, level)
 # ifdef AIX_BACKUP					/* { */
 	dumpkeys = vstralloc("-", level_str, "f", NULL);
 	dbprintf(("%s: running \"%s%s %s - %s\"\n",
-		  get_pname(), cmd, name, dumpkeys, device));
+		  prefix, cmd, name, dumpkeys, device));
 # else							/* } { */
 	dumpkeys = vstralloc(level_str,
 #  ifdef HAVE_DUMP_ESTIMATE				/* { */
@@ -768,10 +777,10 @@ long getsize_dump(disk, level)
 
 #  ifdef HAVE_HONOR_NODUMP				/* { */
 	dbprintf(("%s: running \"%s%s %s 0 1048576 - %s\"\n",
-		  get_pname(), cmd, name, dumpkeys, device));
+		  prefix, cmd, name, dumpkeys, device));
 #  else							/* } { */
 	dbprintf(("%s: running \"%s%s %s 1048576 - %s\"\n",
-		  get_pname(), cmd, name, dumpkeys, device));
+		  prefix, cmd, name, dumpkeys, device));
 #  endif						/* } */
 # endif							/* } */
 	amfree(name);
@@ -779,7 +788,7 @@ long getsize_dump(disk, level)
     else
 #endif							/* } */
     {
-        dbprintf(("%s: no dump program available", get_pname()));
+        dbprintf(("%s: no dump program available", prefix));
 	error("%s: no dump program available", get_pname());
     }
 
@@ -787,7 +796,8 @@ long getsize_dump(disk, level)
 
     switch(dumppid = fork()) {
     case -1:
-	dbprintf(("cannot fork for killpgrp: %s\n", strerror(errno)));
+	dbprintf(("%s: cannot fork for killpgrp: %s\n",
+		  prefix, strerror(errno)));
 	amfree(dumpkeys);
 	amfree(cmd);
 	amfree(rundump_cmd);
@@ -799,18 +809,20 @@ long getsize_dump(disk, level)
 	if(SETPGRP == -1)
 	    SETPGRP_FAILED();
 	else if (killctl[0] == -1 || killctl[1] == -1)
-	    dbprintf(("pipe for killpgrp failed, trying without killpgrp\n"));
+	    dbprintf(("%s: pipe for killpgrp failed, trying without killpgrp\n",
+		      prefix));
 	else {
 	    switch(fork()) {
 	    case -1:
-		dbprintf(("fork failed, trying without killpgrp\n"));
+		dbprintf(("%s: fork failed, trying without killpgrp\n",
+			  prefix));
 		break;
 
 	    default:
 	    {
 		char *killpgrp_cmd = vstralloc(libexecdir, "/killpgrp",
 					       versionsuffix(), NULL);
-		dbprintf(("running %s\n",killpgrp_cmd));
+		dbprintf(("%s: running %s\n", prefix, killpgrp_cmd));
 		dup2(killctl[0], 0);
 		dup2(nullfd, 1);
 		dup2(nullfd, 2);
@@ -819,7 +831,7 @@ long getsize_dump(disk, level)
 		close(killctl[1]);
 		close(nullfd);
 		execle(killpgrp_cmd, killpgrp_cmd, (char *)0, safe_env());
-		dbprintf(("cannot execute %s: %s\n", killpgrp_cmd,
+		dbprintf(("%s: cannot execute %s: %s\n", prefix, killpgrp_cmd,
 		    strerror(errno)));
 		exit(-1);
 	    }
@@ -895,26 +907,28 @@ long getsize_dump(disk, level)
     dumpout = fdopen(pipefd[0],"r");
 
     for(size = -1; (line = agets(dumpout)) != NULL; free(line)) {
-	dbprintf(("%s\n",line));
+	dbprintf(("%s%s\n", prefix_line, line));
 	size = handle_dumpline(line);
 	if(size > -1) {
 	    amfree(line);
 	    if((line = agets(dumpout)) != NULL) {
-		dbprintf(("%s\n",line));
+		dbprintf(("%s%s\n", prefix_line, line));
 	    }
 	    break;
 	}
     }
     amfree(line);
 
-    dbprintf((".....\n"));
+    dbprintf(("%s.....\n", prefix_line));
     if(size == -1)
-	dbprintf(("(no size line match in above dump output)\n.....\n"));
+	dbprintf(("%s: (no size line match in above dump output)\n%s.....\n",
+		  prefix, prefix_line));
     if(size == 0 && level == 0)
-	dbprintf(("(PC SHARE connection problem, is this disk really empty?)\n.....\n"));
+	dbprintf(("%s: (PC SHARE connection problem, is this disk really empty?)\n%s.....\n",
+		  prefix, prefix_line));
 
     if (killctl[1] != -1) {
-	dbprintf(("asking killpgrp to terminate\n"));
+	dbprintf(("%s: asking killpgrp to terminate\n", prefix));
 	aclose(killctl[1]);
 	for(s = 5; s > 0; --s) {
 	    sleep(1);
@@ -927,9 +941,10 @@ long getsize_dump(disk, level)
      * First, try to kill the dump process nicely.  If it ignores us
      * for several seconds, hit it harder.
      */
-    dbprintf(("sending SIGTERM to process group %ld\n", (long) dumppid));
+    dbprintf(("%s: sending SIGTERM to process group %ld\n",
+	      prefix, (long) dumppid));
     if (kill(-dumppid, SIGTERM) == -1) {
-	dbprintf(("kill failed: %s\n", strerror(errno)));
+	dbprintf(("%s: kill failed: %s\n", prefix, strerror(errno)));
     }
     /* Now check whether it dies */
     for(s = 5; s > 0; --s) {
@@ -938,9 +953,10 @@ long getsize_dump(disk, level)
 	    goto terminated;
     }
 
-    dbprintf(("sending SIGKILL to process group %ld\n", (long) dumppid));
+    dbprintf(("%s: sending SIGKILL to process group %ld\n",
+	      prefix, (long) dumppid));
     if (kill(-dumppid, SIGKILL) == -1) {
-	dbprintf(("kill failed: %s\n", strerror(errno)));
+	dbprintf(("%s: kill failed: %s\n", prefix, strerror(errno)));
     }
     for(s = 5; s > 0; --s) {
 	sleep(1);
@@ -948,7 +964,7 @@ long getsize_dump(disk, level)
 	    goto terminated;
     }
 
-    dbprintf(("cannot kill it, waiting for normal termination\n"));
+    dbprintf(("%s: cannot kill it, waiting for normal termination\n", prefix));
     wait(NULL);
 
  terminated:
@@ -1061,21 +1077,22 @@ long getsize_smbtar(disk, level, exclude_spec)
     dumpout = fdopen(pipefd,"r");
 
     for(size = -1; (line = agets(dumpout)) != NULL; free(line)) {
-	dbprintf(("%s\n",line));
+	dbprintf(("%s%s\n", prefix_line, line));
 	size = handle_dumpline(line);
 	if(size > -1) {
 	    amfree(line);
 	    if((line = agets(dumpout)) != NULL) {
-		dbprintf(("%s",line));
+		dbprintf(("%s%s\n", prefix_line, line));
 	    }
 	    break;
 	}
     }
     amfree(line);
 
-    dbprintf((".....\n"));
+    dbprintf(("%s.....\n", prefix_line));
     if(size == -1)
-	dbprintf(("(no size line match in above smbclient output)\n.....\n"));
+	dbprintf(("%s: (no size line match in above smbclient output)\n%s.....\n",
+		  prefix, prefix_line));
     if(size==0 && level ==0)
 	size=-1;
 
@@ -1155,8 +1172,8 @@ time_t dumpsince;
 	    if ((in = fopen(inputname, "r")) == NULL) {
 		int save_errno = errno;
 
-		dbprintf(("%s-gnutar: error opening %s: %s\n",
-			  get_pname(),
+		dbprintf(("%s: gnutar: error opening %s: %s\n",
+			  prefix,
 			  inputname,
 			  strerror(save_errno)));
 		if (baselevel < 0) {
@@ -1169,30 +1186,35 @@ time_t dumpsince;
 	 * Copy the previous listed incremental file to the new one.
 	 */
 	if ((out = fopen(incrname, "w")) == NULL) {
-	    dbprintf(("opening %s: %s\n", incrname, strerror(errno)));
+	    dbprintf(("%s: opening %s: %s\n",
+		      prefix, incrname, strerror(errno)));
 	    goto common_exit;
 	}
 
 	for (; (line = agets(in)) != NULL; free(line)) {
 	    if (fputs(line, out) == EOF || putc('\n', out) == EOF) {
-		dbprintf(("writing to %s: %s\n", incrname, strerror(errno)));
+		dbprintf(("%s: writing to %s: %s\n",
+			   prefix, incrname, strerror(errno)));
 		goto common_exit;
 	    }
 	}
 	amfree(line);
 
 	if (ferror(in)) {
-	    dbprintf(("reading from %s: %s\n", inputname, strerror(errno)));
+	    dbprintf(("%s: reading from %s: %s\n",
+		      prefix, inputname, strerror(errno)));
 	    goto common_exit;
 	}
 	if (fclose(in) == EOF) {
-	    dbprintf(("closing %s: %s\n", inputname, strerror(errno)));
+	    dbprintf(("%s: closing %s: %s\n",
+		      prefix, inputname, strerror(errno)));
 	    in = NULL;
 	    goto common_exit;
 	}
 	in = NULL;
 	if (fclose(out) == EOF) {
-	    dbprintf(("closing %s: %s\n", incrname, strerror(errno)));
+	    dbprintf(("%s: closing %s: %s\n",
+		      prefix, incrname, strerror(errno)));
 	    out = NULL;
 	    goto common_exit;
 	}
@@ -1230,7 +1252,7 @@ time_t dumpsince;
 	    efile = newstralloc(efile, file);
 	else {
 	    dbprintf(("%s: missing exclude list file \"%s\" discarded\n",
-		      get_pname(), file));
+		      prefix, file));
 	    amfree(efile);
 	}
 #undef sc
@@ -1285,21 +1307,22 @@ time_t dumpsince;
     dumpout = fdopen(pipefd,"r");
 
     for(size = -1; (line = agets(dumpout)) != NULL; free(line)) {
-	dbprintf(("%s\n",line));
+	dbprintf(("%s%s\n", prefix_line, line));
 	size = handle_dumpline(line);
 	if(size > -1) {
 	    amfree(line);
 	    if((line = agets(dumpout)) != NULL) {
-		dbprintf(("%s\n",line));
+		dbprintf(("%s%s\n", prefix_line, line));
 	    }
 	    break;
 	}
     }
     amfree(line);
 
-    dbprintf((".....\n"));
+    dbprintf(("%s.....\n", prefix_line));
     if(size == -1)
-	dbprintf(("(no size line match in above gnutar output)\n.....\n"));
+	dbprintf(("%s: (no size line match in above gnutar output)\n%s.....\n",
+		  prefix, prefix_line));
     if(size==0 && level ==0)
 	size=-1;
 
