@@ -1,5 +1,11 @@
 2001-08-01 John R. Jackson (jrj@purdue.edu)
 
+	* client-src/sendsize.c: Prefix each debug line with sendsize process
+	  information to make picking out the output from a particular estimate
+	  run easier when maxdumps > 1.
+
+2001-08-01 John R. Jackson (jrj@purdue.edu)
+
 	* server-src/amcheck.c: Unlink the temp files as soon as they are
 	  created so they always go away when amcheck terminates.  Use
 	  pipespawn() instead of system() to call the MAILER program.  Call
